[package]
name = "mosaic-rust"
version = "0.1.0"
authors = ["Chapman Shoop <chapman.shoop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mlib"
path = "src/lib.rs"

[dependencies]
image = "0.18.0"
rand = "0.8.0"
rayon = "1.5"
itertools = "0.10.0"
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.3"
